--- a/index.html
+++ b/index.html
@@ -9,27 +9,54 @@
     <title>Dev Board</title>
 </head>
 
-<body class="p-10">
-    <header class="m-10">
+<body class="p-20">
+    <header class="p-10">
         <nav class="navbar rounded-xl p-5 bg-white justify-center content-cente">
             <div class="flex-1">
                 <img class="inline w-10 h-10" src="/images/logo.png" alt="">
-                <a class="text-2xl">Dev <span class="font-bold">Board</span></a>
+                <a class="text-3xl">Dev <span class="font-bold">Board</span></a>
             </div>
             <div class="flex gap-x-5">
-                <div class="themeColor px-2 align-middle rounded-xl">
-                    <img class="inline" src="/images/checkbox.png" alt="">
-                    <span id="taskCompletionCount" class="text-2xl font-bold">23</span>
+                <div class="themeColor p-2 rounded-xl m-auto flex justify-center content-center">
+                    <img class="w-full h-full m-auto mr-1" src="/images/checkbox.png" alt="">
+                    <p id="taskCompletionCount" class="text-3xl font-bold">23</p>
                 </div>
-                <div id="themeBtn" class="align-middle p-3 themeColor rounded-full">
+                <div id="themeBtn" class="p-3 themeColor rounded-full">
                     <img src="/images/theme-btn.png" alt="">
                 </div>
             </div>
         </nav>
     </header>
 
-    <main>
-
+    <main class="px-10">
+        <div class="grid grid-cols-3 justify-around content-center">
+            <div class="bg-white rounded-2xl col-span-2 grid grid-cols-4 gap-x-2 justify-around content-center">
+                <div class="themeColor rounded-xl flex justify-center content-center gap-x-2">
+                    <img src="/images/checkbox.png" class="bg-white p-3 rounded-2xl w-14 h-14 ">
+                    <div class="">
+                        <p class="text-nowrap">Task Assigned</p>
+                        <p class="text-3xl font-bold" id="tashCount">05</p>
+                    </div>
+                </div>
+                <div class="col-span-2"></div>
+                <div class="themeColor rounded-xl flex justify-center content-center gap-x-2">
+                    <img src="/images/calender.png" class="bg-white p-3 rounded-2xl w-14 h-14 ">
+                    <div class="">
+                        <p class="text-nowrap">Task Assigned</p>
+                        <p class="text-3xl font-bold" id="tashCount">05</p>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="flex justify-center content-center gap-x-2 mb-3">
+                    <img src="/images/activity.png" alt="" class="w-7 h-7">
+                    <p class="text-xl">Activity Log</p>
+                </div>
+                <div class="flex justify-center">
+                    <button class="btn btn-primary" id="clearHistory">Clear History</button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
