--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </header>
 
     <main class="px-10">
-        <div class="grid grid-cols-4 justify-between gap-3 items-center">
-            <section class="col-span-3">
-                <div class="bg-white p-5 rounded-t-2xl grid grid-cols-4 gap-x-2 justify-around items-center">
+        <div class="grid grid-cols-4 justify-between gap-3">
+            <section class="bg-white rounded-2xl col-span-3">
+                <div class="grid grid-cols-4 gap-x-2 justify-around items-center p-5">
                     <div class="themeColor p-3 rounded-xl flex justify-center items-center gap-x-2">
                         <img src="/images/checkbox.png" class="bg-white p-3 rounded-2xl w-14 h-14 ">
                         <div class="">
@@ -51,19 +51,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="border-y border-dashed border-stone-400 w-full"></div>
-                <div class="h-10 bg-red-800">
+                <div class="mb-5 border-y border-dashed border-stone-400 w-full"></div>
+                <div class="h-10 p-5">
                     f
                 </div>
             </section>
-            <section class="bg-white p-3 rounded-2xl">
-                <div class="flex justify-center items-center gap-x-2 mb-3">
-                    <img src="/images/activity.png" alt="" class="w-5 h-5">
-                    <p class="text-xl">Activity Log</p>
+            <section class="bg-white rounded-2xl">
+                <div class="p-5">
+                    <div class="flex justify-center items-center gap-x-2 mb-3">
+                        <img src="/images/activity.png" alt="" class="w-5 h-5">
+                        <p class="text-xl">Activity Log</p>
+                    </div>
+                    <div class="flex justify-center">
+                        <button class="btn btn-primary" id="clearHistory">Clear History</button>
+                    </div>
                 </div>
-                <div class="flex justify-center">
-                    <button class="btn btn-primary" id="clearHistory">Clear History</button>
-                </div>
+                <div class="mb-5 border-y border-dashed border-stone-400 w-full"></div>
             </section>
         </div>
     </main>
