--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img class="w-full h-full m-auto mr-1" src="/images/checkbox.png" alt="">
                     <p id="taskCompletionCount" class="text-3xl font-bold">23</p>
                 </div>
-                <div id="themeBtn" class="p-3 bg-slate-100 rounded-full">
+                <div id="themeBtn" class="p-3 cursor-pointer bg-slate-100 rounded-full">
                     <img src="/images/theme-btn.png" alt="">
                 </div>
             </div>
@@ -43,7 +43,7 @@
                             <p class="text-3xl font-bold" id="taskCount">06</p>
                         </div>
                     </div>
-                    <div id="discover" class="col-span-3 flex p-2 items-center bg-linear-to-r from-blue-600 to-blue-300 rounded-xl">
+                    <div id="discover" class="col-span-3 flex p-2 items-center cursor-pointer bg-linear-to-r from-blue-600 to-blue-300 rounded-xl">
                         <img src="/images/board.png" class="" alt="">
                         <p class="text-white text-xl">Discover Something <br> New Today!</p>
                     </div>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="mb-5 border border-dashed border-stone-200 w-full"></div>
 
-                <div class="grid grid-cols-3 gap-3 justify-around m-5 bg-slate-100 bg-white">
+                <div class="grid grid-cols-3 gap-3 justify-around m-5 bg-white">
                     <div class="p-2 bg-slate-100 rounded-lg">
                         <div class="flex">
                             <p class="px-2 py-1 rounded-lg border border-neutral-400 bg-white">ShopEase</p>
@@ -72,7 +72,7 @@
                                 <p class="text-slate-800">Deadline</p>
                                 <p class="">21 March 25</p>
                             </div>
-                            <button type="button" class="completedBtn btnClasses">Completed</button>
+                            <button type="button" class="completedBtn cursor-pointer btnClasses">Completed</button>
                         </div>
                     </div>
                     <div class="p-2 bg-slate-100 rounded-lg">
@@ -86,7 +86,7 @@
                                 <p class="text-slate-800">Deadline</p>
                                 <p class="">21 March 25</p>
                             </div>
-                            <button type="button" class="completedBtn btnClasses">Completed</button>
+                            <button type="button" class="completedBtn cursor-pointer btnClasses">Completed</button>
                         </div>
                     </div>
                     <div class="p-2 bg-slate-100 round bg-m-m-lg">
@@ -103,7 +103,7 @@
                                 <p class="text-slate-800">Deadline</p>
                                 <p class="">21 March 25</p>
                             </div>
-                            <button type="button" class="completedBtn bg-m btnClasses">Completed</button>
+                            <button type="button" class="completedBtn cursor-pointer bg-m btnClasses">Completed</button>
                         </div>
                     </div>
                     <div class="p-2 bg-slate-100 rounded-lg">
@@ -120,7 +120,7 @@
                                 <p class="text-slate-800">Deadline</p>
                                 <p class="">21 March 25</p>
                             </div>
-                            <button type="button" class="completedBtn bg-m btnClasses">Completed</button>
+                            <button type="button" class="completedBtn cursor-pointer bg-m btnClasses">Completed</button>
                         </div>
                     </div>
                     <div class="p-2 bg-slate-100 rounded-lg">
@@ -137,7 +137,7 @@
                                 <p class="text-slate-800">Deadline</p>
                                 <p class="">21 March 25</p>
                             </div>
-                            <button type="button" class="completedBtn bg-m btnClasses">Completed</button>
+                            <button type="button" class="completedBtn cursor-pointer bg-m btnClasses">Completed</button>
                         </div>
                     </div>
                     <div class="p-2 bg-slate-100 rounded-lg">
@@ -154,7 +154,7 @@
                                 <p class="text-slate-800">Deadline</p>
                                 <p class="">21 March 25</p>
                             </div>
-                            <button type="button" class="completedBtn btnClasses">Completed</button>
+                            <button type="button" class="completedBtn cursor-pointer btnClasses">Completed</button>
                         </div>
                     </div>
                 </div>
